[gd_scene load_steps=15 format=3 uid="uid://dsv54oatgckjp"]

[ext_resource type="Script" path="res://scripts/Birdscript.gd" id="1_hjhxw"]
[ext_resource type="Script" path="res://scenes/Game_Controller.gd" id="1_ks50e"]
[ext_resource type="Texture2D" uid="uid://c4fmp37p8rdfg" path="res://sprites/fishTile_080.png" id="2_jrear"]
[ext_resource type="PackedScene" uid="uid://d10wpgk0dbtt4" path="res://gameObjects/wall.tscn" id="3_qrdjl"]
[ext_resource type="Script" path="res://scripts/Sus.gd" id="4_kebhp"]
[ext_resource type="Script" path="res://scenes/Floor.gd" id="5_hn3db"]
[ext_resource type="Texture2D" uid="uid://civb8y0opchff" path="res://sprites/fishTile_078.png" id="5_jkv1j"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="6_f61hf"]
[ext_resource type="AudioStream" uid="uid://um0wd42eh0oo" path="res://crash.wav" id="9_3m6tl"]
[ext_resource type="AudioStream" uid="uid://b4rui4s5nf22n" path="res://Ludum Dare 38 - Track 2.wav" id="10_espgc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8ploy"]
radius = 46.0977

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fjj1"]
size = Vector2(997, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4utm"]
size = Vector2(155, 795)

[sub_resource type="CircleShape2D" id="CircleShape2D_280fk"]
radius = 55.0

[node name="Game_Controller" type="Node2D"]
script = ExtResource("1_ks50e")

[node name="Fish" type="RigidBody2D" parent="."]
position = Vector2(272, 216)
script = ExtResource("1_hjhxw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fish"]
position = Vector2(-168, 226)
shape = SubResource("CircleShape2D_8ploy")

[node name="FishTile080" type="Sprite2D" parent="Fish"]
position = Vector2(-169, 226)
scale = Vector2(2, 2)
texture = ExtResource("2_jrear")

[node name="Wall" parent="." instance=ExtResource("3_qrdjl")]
position = Vector2(214, 27)
mass = 0.001
gravity_scale = 2.0

[node name="Wall2" parent="." instance=ExtResource("3_qrdjl")]
position = Vector2(332, 18)
mass = 0.001
gravity_scale = 2.0

[node name="Wall3" parent="." instance=ExtResource("3_qrdjl")]
position = Vector2(453, 20)
mass = 0.001
gravity_scale = 2.0

[node name="Wall4" parent="." instance=ExtResource("3_qrdjl")]
position = Vector2(212, -231)
mass = 0.001
gravity_scale = 2.0

[node name="Wall5" parent="." instance=ExtResource("3_qrdjl")]
position = Vector2(-454, 157)
mass = 1000.0
gravity_scale = 0.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(11, 670)
script = ExtResource("5_hn3db")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(663.5, 10.5)
shape = SubResource("RectangleShape2D_0fjj1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1201, -339)
shape = SubResource("RectangleShape2D_a4utm")

[node name="Sus" type="RigidBody2D" parent="."]
position = Vector2(762, 231)
mass = 0.005
gravity_scale = 2.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("4_kebhp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sus"]
position = Vector2(132, 87)
shape = SubResource("CircleShape2D_280fk")

[node name="Sprite2D" type="Sprite2D" parent="Sus"]
position = Vector2(127, 86)
texture = ExtResource("5_jkv1j")

[node name="Sus2" type="RigidBody2D" parent="."]
position = Vector2(795, 258)
mass = 0.005
gravity_scale = 2.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("4_kebhp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sus2"]
position = Vector2(241, 64)
shape = SubResource("CircleShape2D_280fk")

[node name="Sprite2D" type="Sprite2D" parent="Sus2"]
position = Vector2(239, 59)
texture = ExtResource("5_jkv1j")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_f61hf")

[node name="score" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "0"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Sound Effects" type="Node" parent="AudioStreamPlayer"]

[node name="Crash" type="AudioStreamPlayer2D" parent="AudioStreamPlayer/Sound Effects"]
stream = ExtResource("9_3m6tl")

[node name="bgm" type="AudioStreamPlayer2D" parent="AudioStreamPlayer/Sound Effects"]
stream = ExtResource("10_espgc")
autoplay = true

[connection signal="body_entered" from="Fish" to="Fish" method="_on_body_entered"]
[connection signal="body_shape_entered" from="Fish" to="Fish" method="_on_body_shape_entered"]
[connection signal="child_entered_tree" from="StaticBody2D" to="StaticBody2D" method="_on_child_entered_tree"]
[connection signal="body_entered" from="Sus" to="Sus" method="_on_body_entered"]
[connection signal="body_shape_entered" from="Sus" to="Sus" method="_on_body_shape_entered"]
[connection signal="body_entered" from="Sus2" to="Sus2" method="_on_body_entered"]
[connection signal="body_shape_entered" from="Sus2" to="Sus2" method="_on_body_shape_entered"]
